codepkg/objects/Variable_Data_Upload_LineItem__c.object
<CustomObject>
    <fields>
        <fullName>ColumnAA_Data__c</fullName>
        <label>ColumnAA Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAA__c</fullName>
        <label>ColumnAA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAB_Data__c</fullName>
        <label>ColumnAB Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAC_Data__c</fullName>
        <label>ColumnAC Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAC__c</fullName>
        <label>ColumnAC</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAD_Data__c</fullName>
        <label>ColumnAD Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAD__c</fullName>
        <label>ColumnAD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAE_Data__c</fullName>
        <label>ColumnAE Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAE__c</fullName>
        <label>ColumnAE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAF_Data__c</fullName>
        <label>ColumnAF Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAF__c</fullName>
        <label>ColumnAF</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAG_Data__c</fullName>
        <label>ColumnAG Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAG__c</fullName>
        <label>ColumnAG</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAH_Data__c</fullName>
        <label>ColumnAH Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAH__c</fullName>
        <label>ColumnAH</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAI_Data__c</fullName>
        <label>ColumnAI Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAI__c</fullName>
        <label>ColumnAI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAJ_Data__c</fullName>
        <label>ColumnAJ Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAJ__c</fullName>
        <label>ColumnAJ</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAK_Data__c</fullName>
        <label>ColumnAK Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAK__c</fullName>
        <label>ColumnAK</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAL_Data__c</fullName>
        <label>ColumnAL Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAL__c</fullName>
        <label>ColumnAL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAM_Data__c</fullName>
        <label>ColumnAM Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAM__c</fullName>
        <label>ColumnAM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAN_Data__c</fullName>
        <label>ColumnAN Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAN__c</fullName>
        <label>ColumnAN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAO_Data__c</fullName>
        <label>ColumnAO Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAO__c</fullName>
        <label>ColumnAO</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAP_Data__c</fullName>
        <label>ColumnAP Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAP__c</fullName>
        <label>ColumnAP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAQ_Data__c</fullName>
        <label>ColumnAQ Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAQ__c</fullName>
        <label>ColumnAQ</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAR_Data__c</fullName>
        <label>ColumnAR Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAR__c</fullName>
        <label>ColumnAR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAS_Data__c</fullName>
        <label>ColumnAS Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAS__c</fullName>
        <label>ColumnAS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAT_Data__c</fullName>
        <label>ColumnAT Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAT__c</fullName>
        <label>ColumnAT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAU_Data__c</fullName>
        <label>ColumnAU Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAU__c</fullName>
        <label>ColumnAU</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAV_Data__c</fullName>
        <label>ColumnAV Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAV__c</fullName>
        <label>Column AV</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAW_Data__c</fullName>
        <label>ColumnAW Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAW__c</fullName>
        <label>ColumnAW</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAX__c</fullName>
        <label>ColumnAX</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAY_Data__c</fullName>
        <label>ColumnAY Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAY__c</fullName>
        <label>ColumnAY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAZ_Data__c</fullName>
        <label>ColumnAZ Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAZ__c</fullName>
        <label>ColumnAZ</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnA_Data__c</fullName>
        <label>ColumnA Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnA__c</fullName>
        <label>ColumnA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnAx_Data__c</fullName>
        <label>ColumnAx Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnB_Data__c</fullName>
        <label>ColumnB Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnB__c</fullName>
        <label>ColumnB</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnC_Data__c</fullName>
        <label>ColumnC Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnC__c</fullName>
        <label>ColumnC</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnD_Data__c</fullName>
        <label>ColumnD Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnD__c</fullName>
        <label>ColumnD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnE_Data__c</fullName>
        <label>ColumnE Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnE__c</fullName>
        <label>ColumnE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnF_Data__c</fullName>
        <label>ColumnF Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnF__c</fullName>
        <label>ColumnF</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnG_Data__c</fullName>
        <label>ColumnG Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnG__c</fullName>
        <label>ColumnG</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnH_Data__c</fullName>
        <label>ColumnH Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnH__c</fullName>
        <label>ColumnH</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnI_Data__c</fullName>
        <label>ColumnI Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnI__c</fullName>
        <label>ColumnI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnJ_Data__c</fullName>
        <label>ColumnJ Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnJ__c</fullName>
        <label>ColumnJ</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnK_Data__c</fullName>
        <label>ColumnK Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnK__c</fullName>
        <label>ColumnK</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnL_Data__c</fullName>
        <label>ColumnL Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnL__c</fullName>
        <label>ColumnL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnM_Data__c</fullName>
        <label>ColumnM Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnM__c</fullName>
        <label>ColumnM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnN_Data__c</fullName>
        <label>ColumnN Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnN__c</fullName>
        <label>ColumnN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnO_Data__c</fullName>
        <label>ColumnO Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnO__c</fullName>
        <label>ColumnO</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnP_Data__c</fullName>
        <label>ColumnP Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnP__c</fullName>
        <label>ColumnP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnQ_Data__c</fullName>
        <label>ColumnQ Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnQ__c</fullName>
        <label>ColumnQ</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnR_Data__c</fullName>
        <label>ColumnR Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnR__c</fullName>
        <label>ColumnR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnS_Data__c</fullName>
        <label>ColumnS Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnS__c</fullName>
        <label>ColumnS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnT_Data__c</fullName>
        <label>ColumnT Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnT__c</fullName>
        <label>ColumnT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnU_Data__c</fullName>
        <label>ColumnU Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnU__c</fullName>
        <label>ColumnU</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnV_Data__c</fullName>
        <label>ColumnV Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnV__c</fullName>
        <label>ColumnV</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnW__c</fullName>
        <label>ColumnW</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnX_Data__c</fullName>
        <label>ColumnX Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnX__c</fullName>
        <label>ColumnX</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnY_Data__c</fullName>
        <label>ColumnY Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnY__c</fullName>
        <label>ColumnY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnZ_Data__c</fullName>
        <label>ColumnZ Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Columnw_Data__c</fullName>
        <label>Columnw Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Columnz__c</fullName>
        <label>Columnz</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Log__c</fullName>
        <label>Error Log</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Garment_Factory_Name__c</fullName>
        <label>Garment Factory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Created__c</fullName>
        <description>defines PO is created or not PENDING = PO Not created and PROCESSED = &apos;PO Created&apos;</description>
        <label>PO Created</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>PENDING</fullName>
                    <default>true</default>
                    <label>PENDING</label>
                </value>
                <value>
                    <fullName>PROCESSED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retailer_Order_Number__c</fullName>
        <label>Retailer Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Code__c</fullName>
        <label>Supplier Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variable_Data_Upload__c</fullName>
        <label>Variable Data Upload</label>
        <referenceTo>Variable_Data_Upload__c</referenceTo>
        <relationshipLabel>Variable Data Upload LineItems</relationshipLabel>
        <relationshipName>Variable_Data_Upload_LineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>columnAB__c</fullName>
        <label>columnAB</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Variable Data Upload LineItem</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Variable Data Upload Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Variable Data Upload LineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>